--- a/task3.html
+++ b/task3.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<title>template One</title>
+	<title>Bootstrap 3.0 website template</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="styles/mystyle.css">
